@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2006, 2010, 2012-2013 - TortoiseSVN
+// Copyright (C) 2003-2006, 2010, 2012-2014 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -18,6 +18,7 @@
 
 #pragma once
 #include "SVNGlobal.h"
+#include "TSVNPath.h"
 #pragma warning(push)
 #include "svn_client.h"
 #include "apr_hash.h"
@@ -66,6 +67,13 @@ public:
      * \return TRUE if the function is successful
      */
     BOOL GetDefaultIgnores();
+
+    /**
+     * Reads the global ignore patterns from svnconfig, and the svn:global-ignores property from the \c path
+     * which will be used later in MatchIgnorePattern().
+     * \return TRUE if the function is successful
+     */
+    BOOL GetWCIgnores(const CTSVNPath& path);
 
     /**
      * Checks if the \c name matches a pattern in the array of
