@@ -15,6 +15,8 @@ Version 1.8.6
        for SVNParentPath. (Stefan)
 - BUG: Issue #629: log dialog closes merge
        dialog. (Stefan)
+- BUG: Issue #630: svn:global-ignores not
+       used when adding. (Stefan)
 
 Version 1.8.5
 - BUG: Issue #594: "Diff with url" generated
